Changed Practical to Essential to match Etsy store

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Default fallback; each page overrides via react-helmet-async -->
-    <title>Simple Biz Toolkit | Practical Templates & Tools for Small Business Owners</title>
+    <title>Simple Biz Toolkit | Essential Templates & Tools for Small Business Owners</title>
     <meta
       name="description"
       content="Ready-to-use templates and toolkits for small business owners. Simple, printable tools that save time and reduce admin."
