--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="/images/favicon-16x16.png"
     />
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-    <link rel="manifest" href="images//site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Default fallback; each page overrides via react-helmet-async -->
     <title>
